--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "API Gateway for NPNS project",
   "main": "src/index.ts",
   "scripts": {
-    "ts:check-types": "tsc",
+    "build": "tsc",
     "start:dev": "ts-node-dev src/index.ts",
+    "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts"
   },
   "repository": {
