--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "build": "tsc",
     "start:dev": "ts-node-dev src/index.ts",
-    "start": "node dist/index.js",
-    "lint": "eslint src/**/*.ts"
+    "start": "node --trace-warnings dist/index.js",
+    "lint": "eslint src/**/*.ts",
+    "hook:account-db": "docker exec -it npns_account_db_1 /bin/sh",
+    "hook:gateway": "docker exec -it npns_gatewaydb_1 /bin/sh",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "repository": {
     "type": "git",
@@ -47,8 +50,10 @@
     "class-validator": "^0.13.1",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.30"
   },
   "husky": {
     "hooks": {
