--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start:dev": "ts-node-dev src/index.ts",
-    "start": "node --trace-warnings dist/index.js",
+    "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts",
     "hook:account-db": "docker exec -it npns_account_db_1 /bin/sh",
     "hook:gateway": "docker exec -it npns_gatewaydb_1 /bin/sh",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/koniferous22/npns-api.git"
+    "url": "git+https://github.com/koniferous22/npns-gateway.git"
   },
   "keywords": [
     "Apollo",
