--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "class-validator": "^0.13.1",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
+    "mysql": "^2.18.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
