--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npns-api",
+  "name": "npns-gateway",
   "version": "2.0.0",
   "description": "API Gateway for NPNS project",
   "main": "src/index.ts",
@@ -8,9 +8,7 @@
     "start:dev": "ts-node-dev src/index.ts",
     "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts",
-    "hook:account-db": "docker exec -it npns_account_db_1 /bin/sh",
-    "hook:gateway": "docker exec -it npns_gatewaydb_1 /bin/sh",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    "orm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +28,7 @@
   },
   "homepage": "https://github.com/koniferous22/npns-api#readme",
   "devDependencies": {
+    "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.18.0",
