--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:dev": "ts-node-dev src/index.ts",
     "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts",
-    "orm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    "orm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "migrate:mongo": "node ./node_modules/migrate-mongo/bin/migrate-mongo.js"
   },
   "repository": {
     "type": "git",
@@ -38,6 +39,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
+    "migrate-mongo": "^8.1.4",
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.1",
     "tsc": "^1.20150623.0",
@@ -49,6 +51,7 @@
     "class-validator": "^0.13.1",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
+    "mongodb": "^3.6.4",
     "mysql": "^2.18.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
