--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/node": "^14.14.22",
     "@types/uuid": "^8.3.0",
+    "@types/wait-on": "^5.2.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.18.0",
@@ -43,22 +44,16 @@
     "migrate-mongo": "^8.1.4",
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.1",
-    "tsc": "^1.20150623.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@apollo/federation": "^0.21.0",
+    "@apollo/gateway": "^0.23.0",
     "apollo-server": "^2.19.2",
     "class-validator": "^0.13.1",
     "graphql": "^15.5.0",
-    "graphql-tag": "^2.11.0",
-    "mongodb": "^3.6.4",
     "mysql": "^2.18.1",
-    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.30",
-    "uuid": "^8.3.2"
+    "wait-on": "^5.2.1"
   },
   "husky": {
     "hooks": {
