--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "homepage": "https://github.com/koniferous22/npns-api#readme",
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/express-jwt": "^6.0.1",
     "@types/node": "^14.14.22",
     "@types/uuid": "^8.3.0",
     "@types/wait-on": "^5.2.0",
@@ -49,6 +51,8 @@
   "dependencies": {
     "@apollo/gateway": "^0.23.0",
     "apollo-server": "^2.19.2",
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "graphql": "^15.5.0",
     "wait-on": "^5.2.1"
   },
